# Dawn

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  config.h.in
src/core/: CMakeLists.txt  app_state.cpp  app_state.h  command_line.cpp  command_line.h  common.h  event_handler.h  functional.h  guid.cpp  guid.h  input.h  integer.h  list.h  log.cpp  log.h  murmur.cpp  murmur.h  os.cpp  os.h  pair.h  platform.h  profiler.cpp  profiler.h  spritebatch.cpp  spritebatch.h  time.cpp  time.h  types.h  unit_tests.cpp  unit_tests.h
src/core/containers/: array.h  event_stream.h  hash_map.h  hash_set.h  map.h  queue.h  sort_map.h  types.h  vector.h
src/core/error/: callstack.h  callstack_android.cpp  callstack_linux.cpp  callstack_windows.cpp  error.cpp  error.h
src/core/events/: event_dispatcher.h  event_handler.cpp  event_handler.h  event_interface.h  event_listener.h  events.cpp  events.h  key_events.h  mouse_events.h
src/core/filesystem/: file.h  file_monitor.h  file_monitor_linux.cpp  file_monitor_noop.cpp  filesystem.h  filesystem_apk.cpp  filesystem_apk.h  filesystem_disk.cpp  filesystem_disk.h  path.cpp  path.h  reader_writer.h  types.h
src/core/json/: json.cpp  json.h  json_object.h  sjson.cpp  sjson.h  types.h
src/core/math/: aabb.cpp  aabb.h  color4.h  frustum.h  intersection.cpp  intersection.h  math.cpp  math.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  plane3.h  quaternion.cpp  quaternion.h  random.h  sphere.cpp  sphere.h  types.h  vector2.h  vector3.h  vector4.h
src/core/memory/: allocator.h  linear_allocator.cpp  linear_allocator.h  memory.cpp  memory.h  pool_allocator.cpp  pool_allocator.h  proxy_allocator.cpp  proxy_allocator.h  stack_allocator.cpp  stack_allocator.h  temp_allocator.h  types.h
src/core/network/: ip_address.h  socket.cpp  socket.h  types.h
src/core/platform/: CMakeLists.txt
src/core/platform/sdl/: sdl_application.cpp  sdl_application.h
src/core/strings/: dynamic_string.h  fixed_string.h  string.h  string_id.cpp  string_id.h  string_stream.h  types.h  utf8.cpp  utf8.h
src/core/thread/: atomic_int.cpp  atomic_int.h  condition_variable.cpp  condition_variable.h  mutex.cpp  mutex.h  semaphore.cpp  semaphore.h  thread.cpp  thread.h  types.h
src/dawn/: CMakeLists.txt  main.cpp
src/device/: window.h
